# igcs

./: .gitignore  LICENSE-MIT  README.md  pyproject.toml  requirements-develop.txt  requirements-experiment.txt  requirements.txt
.github/workflows/: pypi-release.yml
devops/: package-install-and-test.sh
examples/: barack_obama_wiki.txt  grounding_example.py  hf_spaces_igcs_demo.py
examples/models-cache/: 0n-JB2kz6Fe301_nL1FP49XpBJU.json  42zTsUSig6imc9qwyCRHxqzAf1Q.json  8Vo72D-OmzsqDTSnLgLGZ-dcyAs.json  Cvbrn7SEx7dfOH8tXmGMhvgm8rk.json  DRplZTo82O2-fGSWuOOEwLbx8pg.json  Em5ExFHHF4nwCMlZw_Q0uRaD8VQ.json  GNS2ezr5boqpZBrWbSEX6-6DO-Y.json  SlgHYML4wudMhjIF4EyjYE8X8qo.json  UUBWAD8LhPvradq4YJAEVvFFwq0.json  is850Sda27I-7vhom0mGof1A8mM.json
scripts/: analyze_manual_annotation.py  analyze_manual_annotations_scores.py  compute_iaa_aspectnews.py  compute_overall_scores_and_ci.py  dataset_stats.py  eval_on_all.py  generate_datasets_table.py  meta_eval.py  meta_prompting.py  paired_significance_tests.py  prepare_openasp_files.py
src/igcs/: configs.py  cseval.py  entities.py  predict.py
src/igcs/datasets/: __init__.py  prepare_igcs_datasets.py
src/igcs/datasets/create_gencs_dataset/: annotate_dataset.py  annotate_dataset_single_step.py  create_reverse_instructions_dataset_splits.py  make_dataset_e2e.py  response_parser.py  sample_datasets_for_tagging.py
src/igcs/datasets/create_gencs_dataset/prepare_sources/: enron_emails.py  github_code.py  pg19_books.py  pubmed_abstracts.py  tripadvisor_reviews.py  wiki_pages.py
src/igcs/datasets/igcsbench_datasets/: __init__.py  aspectnews.py  base.py  debatesum.py  openasp.py  reverse_instructions.py  scifact.py  spark.py
src/igcs/evaluate/: evaluation_functions.py  helpers.py  ila.py
src/igcs/grounding/: __init__.py  completion_parsers.py  selection_utils.py  tokenization.py
src/igcs/llms/: claude.py  gemini.py  gpt4.py  llama3_igcs.py  together_api.py
src/igcs/train_model/: __init__.py  train_helpers.py
src/igcs/utils/: diskcache.py  ioutils.py  log.py  prompting.py
tests/: test_completion_parsers.py  test_cseval.py  test_grounding.py  test_source_datasets.py
